# library-lookup

./: .gitignore  README.md  colors.json  concurrently.py  dev_requirements.in  dev_requirements.txt  get_book_data.py  mypy.ini  netlify.toml  pyproject.toml  render_data_as_html.py  requirements.in  requirements.txt  tint_colors.py
.github/: dependabot.yml
.github/workflows/: build_site.yml  run_tests.yml  test.yml
.netlify/: state.json
assets/: library_lookup.js  style.css  test_library_lookup.html  test_micro_framework.js
scripts/: upload_site.sh
src/library_lookup/: __init__.py  downloaders.py  parsers.py  passwords.py  render_data_as_html.py  strict_soup.py
templates/: books_to_read.html  library_lookup.js
tests/: test_parsers.py  test_render_data_as_html.py
tests/fixtures/: availability.html  isbn_9780804692298.html  isbn_9781847442260.html
tests/stubs/: mechanize._http.pyi  mechanize.pyi  titlecase.pyi
tests/stubs/mechanize/: __init__.pyi
