[project]
name = "library_lookup"
version = "1.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
analytics = ["static/*", "templates/*"]

[tool.coverage.run]
branch = true
source = [
  "library_lookup",
  "tests",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 95

[tool.pytest.ini_options]
filterwarnings = ["error"]

[tool.mypy]
mypy_path = "src"
strict = true
