[project]
name = "library_lookup"
version = "1.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
analytics = ["static/*", "templates/*"]

[tool.coverage.run]
branch = true
source = [
  "library_lookup",
  "tests",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 78

[tool.pytest.ini_options]
filterwarnings = ["error"]

[tool.mypy]
mypy_path = "src"
strict = true

[tool.ruff.lint]
select = ["D", "E", "F"]
ignore = [
    "D200",  # unnecessary-multiline-docstring
    "D203",  # incorrect-blank-line-before-class
    "D205",  # missing-blank-line-after-summary
    "D211",  # blank-line-before-class
    "D212",  # multi-line-summary-first-line
]
